--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Ojibwa Indians -- Missions'
 - !lcsh 'Northwest, Canadian -- Description and travel'
 - !lcsh 'Missionaries -- Northwest, Canadian -- Biography'
+- GITenberg
 title: By Canoe and Dog Train Among The Cree and Salteaux Indians
 url: http://www.gutenberg.org/ebooks/21244
